--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -208,6 +208,7 @@ a.footer-call {
     left: 0;
     right: 0;
     z-index: 2;
+    height: 60px;
 }
 
 .common-home header.fixed-header,
@@ -269,7 +270,8 @@ a {
     position: relative;
     margin: 0 0;
     /* background-color: #fff6f4; */
-    background-color: #e6e6f2;
+    /* background-color: #e6e6f2; */
+    background-color: #030358;
 }
 
 .slide-navigation,
@@ -317,8 +319,9 @@ a {
 }
 
 .header-contaner ul li a {
-    font: 500 20px/normal var(--font-josefin);
-    color: rgb(var(--black-color));
+    font: 500 18px/normal var(--font-josefin);
+    /* color: rgb(var(--black-color)); */
+    color: white;
     text-transform: uppercase;
     transition: var(--transition);
     text-shadow: var(--text-shadow) rgb(var(--blue-color) / 40%);
@@ -1709,6 +1712,7 @@ section.our-service:before {
     /* Mobile Menu  */
     .logo-section .mobile-bars {
         display: block !important;
+        color: white;
     }
 
     .mobile-bars,
@@ -1718,12 +1722,12 @@ section.our-service:before {
         position: absolute;
         right: 20px;
         top: calc(50% - 10px);
-        color: black;
+        color: white;
         cursor: pointer;
         height: 2px;
         width: 35px;
         text-align: center;
-        background-color: rgb(var(--dgreen-color));
+        background-color: white;
         font: 700 20px/35px 'Font Awesome 5 Free';
         border-radius: 20px;
         margin: 10px auto;
@@ -1734,7 +1738,7 @@ section.our-service:before {
     .mobile-bars:after {
         content: '';
         width: calc(100% + 5px);
-        background-color: rgb(var(--black-color));
+        background-color: white;
         position: relative;
         top: -10px;
         margin: auto auto auto auto;
