changes in slider UI

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -516,7 +516,7 @@ section.chairperson {
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgb(17 38 58 / 40%);
+    /* background: rgb(17 38 58 / 40%); */
     z-index: 1;
 }
 
@@ -566,10 +566,32 @@ section.chairperson {
     .video-content {
         left: 5%;
         right: 5%;
+        top: 100px;
         justify-content: center;
         padding: 15px 0;
     }
 }
+
+@media (max-width:900px) {
+    .video-content {
+        left: 5%;
+        right: 5%;
+        bottom: 40%;
+        justify-content: center;
+        padding: 15px 0;
+    }
+}
+
+@media (max-width:1025px) {
+    .video-content {
+        left: 5%;
+        right: 5%;
+        bottom: 40%;
+        justify-content: center;
+        padding: 15px 0;
+    }
+}
+
 
 @media (max-width: 576px) {
     .video-content {
@@ -765,13 +787,13 @@ section.chairperson {
 
 @media (max-width: 768px) {
     .video-block .swiper-slide:before {
-        max-height: 300px;
+        max-height: 1000px;
     }
 }
 
 @media (max-width: 480px) {
     .video-block .swiper-slide:before {
-        max-height: 250px;
+        max-height: 100px;
     }
 }
 
@@ -1715,6 +1737,7 @@ section.our-service:before {
         color: white;
     }
 
+
     .mobile-bars,
     .mobile-bars:before,
     .mobile-bars:after {
@@ -1857,6 +1880,167 @@ section.our-service:before {
     .midd-content p {
         font-size: 14px
     }
+}
+
+@media (max-width: 1200px) {
+
+
+    /* New Offering section End */
+
+
+    /* Our Service  End */
+
+
+    /* Our team Section End  */
+
+
+
+
+    /* Mobile Menu  */
+    .logo-section .mobile-bars {
+        display: block !important;
+        color: white;
+    }
+
+
+    .mobile-bars,
+    .mobile-bars:before,
+    .mobile-bars:after {
+        display: block !important;
+        position: absolute;
+        right: 20px;
+        top: calc(50% - 10px);
+        color: white;
+        cursor: pointer;
+        height: 2px;
+        width: 35px;
+        text-align: center;
+        background-color: white;
+        font: 700 20px/35px 'Font Awesome 5 Free';
+        border-radius: 20px;
+        margin: 10px auto;
+        transition: var(--transition);
+    }
+
+    .mobile-bars:before,
+    .mobile-bars:after {
+        content: '';
+        width: calc(100% + 5px);
+        background-color: white;
+        position: relative;
+        top: -10px;
+        margin: auto auto auto auto;
+        right: 5px;
+        transition: var(--transition);
+    }
+
+    .mobile-bars:after {
+        width: calc(100% + 6px);
+        top: unset;
+        bottom: -8px;
+        right: 6px;
+    }
+
+    .open-menu .mobile-bars {
+        background-color: transparent;
+        height: 40px;
+        margin: 0;
+        transition: var(--transition);
+        top: 8px;
+    }
+
+    .open-menu .mobile-bars:before,
+    .open-menu .mobile-bars:after {
+        transform: rotate(-45deg);
+        width: 100%;
+        top: 60%;
+        left: 0;
+        right: 0;
+        bottom: unset;
+        transition: var(--transition);
+    }
+
+    .open-menu .mobile-bars:after {
+        transform: rotate(45deg);
+        top: 22px !important;
+    }
+
+    /* Mobile Menu End */
+    .video-content h1 {
+        font-size: 40px !important;
+    }
+
+    .logo-section>a>img {
+        max-width: 140px !important;
+    }
+
+    body.open-menu {
+        overflow: hidden;
+    }
+
+    body .slide-navigation ul li a {
+        /* color: rgb(var(--black-color)); */
+        color: white;
+        font: 400 16px/normal var(--font-josefin);
+    }
+
+    body .slide-navigation {
+        position: absolute;
+        z-index: 99;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: rgb(var(--black-color) / 50%);
+        width: 100%;
+        height: auto;
+        margin: 0 0;
+        display: block;
+        visibility: hidden;
+        transition: var(--transition);
+        opacity: 0;
+        backdrop-filter: blur(10px);
+    }
+
+    body.open-menu .header-contaner ul li:hover a,
+    body.open-menu .header-contaner ul li:focus a {
+        color: #fff;
+    }
+
+    body.open-menu .slide-navigation {
+        top: 100%;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    body .slide-navigation ul:not(.social-media) li {
+        display: block;
+        text-align: left;
+    }
+
+    body .header-contaner .slide-navigation ul {
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+
+
+    .footer-section .footer-item {
+        text-align: center;
+    }
+
+    /* Site Title */
+    .site-title>h2 {
+        font-size: 18px
+    }
+
+    /* Site Title End */
+    .midd-content h3 {
+        font-size: 18px
+    }
+
+    .midd-content p {
+        font-size: 14px
+    }
+
 }
 
 @media (max-width: 576px) {
