--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -91,7 +91,7 @@ a {
 }
 
 .footer-logo img {
-    max-width: 125px;
+    /* max-width: 125px; */
     height: 100%;
 }
 
@@ -214,7 +214,7 @@ a.footer-call {
 .common-home header.fixed-header,
 .information header.fixed-header {
     /* background-color: rgb(var(--yellow-color)); */
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 9;
 }
@@ -236,13 +236,13 @@ header.fixed-header,
 header.fixed-header .slide-navigation,
 .common-home header.fixed-header .slide-navigation {
     margin-top: -18px;
-    margin-left: 100px;
+    /* margin-left: 100px; */
     font-size: 26px;
 }
 
 .common-home header.fixed-header .logo-section img.img-fluid,
 .information header .logo-section img.img-fluid {
-    max-width: 170px;
+    max-width: 200px;
     padding: 4px;
 }
 
@@ -761,7 +761,7 @@ section.chairperson {
     .video-block>.main-slider .swiper-slide img.img-fluid {
         height: 300px !important;
         width: 100%;
-        object-fit: cover;
+
     }
 }
 
@@ -785,7 +785,6 @@ section.chairperson {
     left: 0;
     right: 0;
     max-height: 550px;
-    background: linear-gradient(25deg, rgb(var(--header-bg) / 30%) 20%, transparent 60%);
     z-index: 2;
 }
 
@@ -1810,7 +1809,7 @@ section.our-service:before {
     }
 
     .logo-section>a>img {
-        max-width: 140px !important;
+        width: 140px !important;
     }
 
     body.open-menu {
@@ -1975,7 +1974,7 @@ section.our-service:before {
     }
 
     .logo-section>a>img {
-        max-width: 140px !important;
+        max-width: 200px !important;
     }
 
     body.open-menu {
